<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background_activity">

        <ImageView
            android:id="@+id/ivButtonNB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back_24"
            android:backgroundTint="@color/buttons_left_corner"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSettings"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="@dimen/tv_size_settings"
            android:layout_marginEnd="30dp"/>

        <Button
            android:id="@+id/bSettingsEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_en"
            android:background="@drawable/rounded_button_settings_language"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bSettingsRu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_ru"
            android:background="@drawable/rounded_button_settings_language"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_weight="1"/>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>