<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/background_activity">

            <ImageView
                android:id="@+id/ivButtonNB"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                android:backgroundTint="@color/buttons_left_corner"
                app:tint="@color/buttons_left_corner"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/place_holder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:background="@color/background_activity"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/background_menu">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/menu_title"
                android:textSize="24sp"
                android:textColor="@color/text_color_textview_menu_title" />

            <Button
                android:id="@+id/bCalculator_menu"
                android:layout_width="192dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button_menu"
                android:backgroundTint="@color/menu_buttons"
                android:text="@string/menu_calculator"
                android:textColor="@color/text_color_textview_menu"
                android:textSize="@dimen/button_size_menu" />

            <Button
                android:id="@+id/bQuantities_menu"
                android:layout_width="192dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button_menu"
                android:backgroundTint="@color/menu_buttons"
                android:text="@string/menu_quantities"
                android:textColor="@color/text_color_textview_menu"
                android:textSize="@dimen/button_size_menu" />

            <Button
                android:id="@+id/bSettings_menu"
                android:layout_width="192dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button_menu"
                android:backgroundTint="@color/menu_buttons"
                android:text="@string/menu_settings"
                android:textColor="@color/text_color_textview_menu"
                android:textSize="@dimen/button_size_menu" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchThemeMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="end|center"
                app:track="@drawable/switch_track"
                android:thumb="@drawable/switch_thumb"
                android:visibility="visible"
                />

        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>